--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -89,7 +89,7 @@
         <edit-monitoring-tabpane v-if="tabpane_active('edit-monitoring')"  ></edit-monitoring-tabpane> <%# TODO %>
         <infra-logs-tabpane      v-if="tabpane_active('infra_logs')"       v-with="infra_logs: current_infra.infra_logs"></infra-logs-tabpane> <%# TODO %>
         <ec2-tabpane             v-if="tabpane_active('ec2')"              physical_id="{{* tabpaneGroupID}}"></ec2-tabpane>
-        <rds-tabpane             v-if="tabpane_active('rds')"              v-with="physical_id: tabpaneGroupID"></rds-tabpane> <%# TODO %>
+        <rds-tabpane             v-if="tabpane_active('rds')"              physical_id="{{* tabpaneGroupID}}"></rds-tabpane>
         <elb-tabpane             v-if="tabpane_active('elb')"              physical_id="{{* tabpaneGroupID}}"></elb-tabpane>
         <s3-tabpane              v-if="tabpane_active('s3')"               physical_id="{{* tabpaneGroupID}}"></s3-tabpane>
         <edit-runlist-tabpane    v-if="tabpane_active('edit_runlist')"     ></edit-runlist-tabpane>
