--- a/app/views/vue/_monitoring_tabpane.html.erb
+++ b/app/views/vue/_monitoring_tabpane.html.erb
@@ -21,16 +21,18 @@
     <div style="margin-top:30px">
       <div class="col-md-2 col-sm-3">
         <div class="panel-group">
-          <div class="panel panel-default" v-repeat="r: resources" v-if="uncommons.length !== 0">
-            <div class="panel-heading">
-              <h4 class="panel-title">
-              <a class="accordion-toggle" data-toggle="collapse" href="#monitorings-{{*r.physical_id}}">{{*r.physical_id}}</a>
-              </h4>
-            </div>
-            <div class="panel-collapse collapse" id="monitorings-{{r.physical_id}}">
-              <div class="list-group">
-                <a href="#" v-repeat="uncommons" class="list-group-item" v-on="click: show_zabbix_graph(r.physical_id, item)">{{*name}}</a>
-                <a href="#" v-on="click: show_cloudwatch_graph(r.physical_id)" class="list-group-item">NetworkInOut</a>
+          <div v-if="uncommons.length !== 0">
+            <div class="panel panel-default" v-repeat="r: resources">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                <a class="accordion-toggle" data-toggle="collapse" href="#monitorings-{{*r.physical_id}}">{{*r.physical_id}}</a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse" id="monitorings-{{r.physical_id}}">
+                <div class="list-group">
+                  <a href="#" v-repeat="uncommons" class="list-group-item" v-on="click: show_zabbix_graph(r.physical_id, item)">{{*name}}</a>
+                  <a href="#" v-on="click: show_cloudwatch_graph(r.physical_id)" class="list-group-item">NetworkInOut</a>
+                </div>
               </div>
             </div>
           </div>
