[FIX] Enable to work user#edit view.

--- a/app/views/users_admin/index.html.erb
+++ b/app/views/users_admin/index.html.erb
@@ -45,4 +45,7 @@
 
 <div class="page-header"></div>
 <div id="user-edit" style="padding-bottom: 70px;"></div>
+
+<script id="user-edit-template" type="text/template">
 <%= render 'edit' %>
+</script>
