--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -60,7 +60,7 @@
                 <ul class="dropdown-menu">
                   <li><a v-on="click: create_snapshot(block_device.ebs.volume_id)" href="#">Create Snapshot</a></li>
                   <li><a v-on="click: schedule_snapshot(block_device.ebs.volume_id)" href="#">Schedule Snapshot</a></li>
-                  <li><a href="#snapshots-modal" data-toggle="modal" data-backdrop="static">Snapshots</a></li>
+                  <li><a href="#snapshots-modal" data-toggle="modal">Snapshots</a></li>
                 </ul>
               </bootstrap-tooltip>
             </span>
