--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -327,7 +327,7 @@
           <tbody>
             <tr v-repeat="snapshot: snapshots" v-on="click: select_snapshot(snapshot)" v-class="info: snapshot.selected" v-transition="fade">
               <td><input v-model="snapshot.selected" type="checkbox"></td>
-              <td v-text="snapshot.tags.Name"></td>
+              <td v-text="snapshot.tags.Name" style="word-break: break-all"></td>
               <td v-text="snapshot.snapshot_id"></td>
               <td v-text="snapshot_status(snapshot)"></td>
               <td v-text="toLocaleString(snapshot.start_time)"></td>
