--- a/app/assets/stylesheets/bootstrap_extend.css
+++ b/app/assets/stylesheets/bootstrap_extend.css
@@ -63,3 +63,9 @@ input[type="number"] {
     width: 800px;
     margin-left: -100px;
 }
+
+/* for draggable modal */
+.modal-dialog.ui-draggable {
+    margin: auto;
+    top:    30px;
+}
