--- a/app/assets/stylesheets/cf_templates.css
+++ b/app/assets/stylesheets/cf_templates.css
@@ -1,5 +1,5 @@
-
-span.remove-resource, span.remove-array-item {
+span.remove-resource,
+span.remove-array-item {
   font-size: 0.8em;
   cursor: pointer;
 }
