--- a/app/views/layouts/_navbar_bottom.html.erb
+++ b/app/views/layouts/_navbar_bottom.html.erb
@@ -6,7 +6,7 @@
       <script id="toggle-button-template" type="text/template">
       <span v-show="state">
         <bootstrap-tooltip title="{{tooltip}}">
-          <button href="#" class="btn btn-xs" v-attr="disabled: is_inprogress" v-on="click: toggle()" v-class="btn_class">
+          <button class="btn btn-xs" v-attr="disabled: is_inprogress" v-on="click: toggle()" v-class="btn_class">
             <span v-class="blinking: is_inprogress" class="glyphicon glyphicon-off"></span>&nbsp;
             <span v-text="status_text"></span>
           </button>
