--- a/lib/erb-builder/templates/presets/Multi_DataCenter_Pattern_with_S3.json.erb
+++ b/lib/erb-builder/templates/presets/Multi_DataCenter_Pattern_with_S3.json.erb
@@ -1,6 +1,6 @@
 {
     "AWSTemplateFormatVersion": "2010-09-09",
-    "Description": "Multi Server pattern. (ELB x 1, EC2 x 2)",
+    "Description": "Multi DataCenter pattern with S3. (ELB x 1, EC2 x 2, S3 Bucket x 1)",
     "Parameters": {
         "KeyName": {
             "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance",
@@ -10,8 +10,27 @@
             "Description": "WebServer EC2 instance type",
             "Type": "String",
             "Default": "m3.medium",
-            "AllowedValues": <%= skyhopper_modules[:ec2_instance_types_hvm] %>,
+            "AllowedValues": <%= fragment(:ec2_instance_types_hvm) %>,
             "ConstraintDescription": "must be a valid EC2 instance type."
+        },
+        "S3BucketBucketName": {
+            "Description": "The name of S3Bucket",
+            "Type": "String",
+            "Default": "backup"
+        },
+        "S3BucketAccessControl": {
+            "Description": "grants predefined permissions to the bucket.",
+            "Type": "String",
+            "Default": "Private",
+            "AllowedValues": [
+                "Private",
+                "PublicRead",
+                "PublicReadWrite",
+                "AuthenticatedRead",
+                "LogDeliveryWrite",
+                "BucketOwnerRead",
+                "BucketOwnerFullControl"
+            ]
         },
         "BlockDeviceVolumeSize": {
             "Description": "Root volume size",
@@ -29,7 +48,7 @@
         }
     },
     "Mappings": {
-        "RegionMap": <%= skyhopper_modules[:ami_mappings_2014_09] %>
+        "RegionMap": <%= fragment(:ami_mappings_2014_09) %>
     },
     "Resources": {
         "ElasticLoadBalancer" : {
@@ -83,7 +102,7 @@
                     "Fn::FindInMap": [ "RegionMap", { "Ref": "AWS::Region" }, "AMI"]
                 },
                 "AvailabilityZone": {
-                    "Fn::Select" : ["0", { "Fn::GetAZs" : "" }]
+                    "Fn::Select" : ["1", { "Fn::GetAZs" : "" }]
                 },
                 "Tags": [{ "Key": "Name", "Value": "EC2b" }],
                 "BlockDeviceMappings": [
@@ -107,6 +126,13 @@
             "Type" : "AWS::EC2::EIP",
             "Properties" : {
               "InstanceId" : { "Ref" : "EC2b" }
+            }
+        },
+        "S3Bucket": {
+            "Type": "AWS::S3::Bucket",
+            "Properties": {
+                "AccessControl": { "Ref": "S3BucketAccessControl" },
+                "BucketName":    { "Ref": "S3BucketBucketName" }
             }
         }
     }
