--- a/lib/erb-builder/templates/presets/Multi_Server_Pattern_with_RDS.json.erb
+++ b/lib/erb-builder/templates/presets/Multi_Server_Pattern_with_RDS.json.erb
@@ -1,6 +1,6 @@
 {
     "AWSTemplateFormatVersion": "2010-09-09",
-    "Description": "Multi DataCenter pattern with DRS. (ELB x 1, EC2 x 2, RDS x 1)",
+    "Description": "Multi DataCenter pattern with RDS. (ELB x 1, EC2 x 2, RDS x 1)",
     "Parameters": {
         "KeyName": {
             "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance",
@@ -10,7 +10,7 @@
             "Description": "WebServer EC2 instance type",
             "Type": "String",
             "Default": "m3.medium",
-            "AllowedValues": <%= skyhopper_modules[:ec2_instance_types_hvm] %>,
+            "AllowedValues": <%= fragment(:ec2_instance_types_hvm) %>,
             "ConstraintDescription": "must be a valid EC2 instance type."
         },
         "RDSInstanceDBName": {
@@ -95,7 +95,7 @@
         }
     },
     "Mappings": {
-        "RegionMap": <%= skyhopper_modules[:ami_mappings_2014_09] %>
+        "RegionMap": <%= fragment(:ami_mappings_2014_09) %>
     },
     "Resources": {
         "ElasticLoadBalancer" : {
@@ -149,7 +149,7 @@
                     "Fn::FindInMap": [ "RegionMap", { "Ref": "AWS::Region" }, "AMI"]
                 },
                 "AvailabilityZone": {
-                    "Fn::Select" : ["1", { "Fn::GetAZs" : "" }]
+                    "Fn::Select" : ["0", { "Fn::GetAZs" : "" }]
                 },
                 "Tags": [{ "Key": "Name", "Value": "EC2b" }],
                 "BlockDeviceMappings": [
