--- a/lib/erb-builder/templates/presets/Simple_Pattern.json.erb
+++ b/lib/erb-builder/templates/presets/Simple_Pattern.json.erb
@@ -10,7 +10,7 @@
             "Description": "EC2 Instance Type",
             "Type": "String",
             "Default": "t2.micro",
-            "AllowedValues": <%= skyhopper_modules[:ec2_instance_types_hvm] %>,
+            "AllowedValues": <%= fragment(:ec2_instance_types_hvm) %>,
             "ConstraintDescription": "must be a valid EC2 instance type."
         },
         "BlockDeviceVolumeSize": {
@@ -29,7 +29,7 @@
         }
     },
     "Mappings": {
-        "RegionMap": <%= skyhopper_modules[:ami_mappings_2014_09] %>
+        "RegionMap": <%= fragment(:ami_mappings_2014_09) %>
     },
     "Resources": {
         "EC2Instance": {
