--- a/lib/erb-builder/templates/presets/Simple_Pattern_with_RDS.json.erb
+++ b/lib/erb-builder/templates/presets/Simple_Pattern_with_RDS.json.erb
@@ -1,16 +1,16 @@
 {
     "AWSTemplateFormatVersion": "2010-09-09",
-    "Description": "Multi DataCenter pattern with RDS. (ELB x 1, EC2 x 2, RDS x 1)",
+    "Description": "Simple Pattern with RDS (EC2x1, RDSx1)",
     "Parameters": {
         "KeyName": {
             "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance",
             "Type": "String"
         },
-        "EC2InstanceInstanceType": {
-            "Description": "WebServer EC2 instance type",
+        "EC2InstanceType": {
+            "Description": "EC2 Instance Type",
             "Type": "String",
-            "Default": "m3.medium",
-            "AllowedValues": <%= skyhopper_modules[:ec2_instance_types_hvm] %>,
+            "Default": "t2.micro",
+            "AllowedValues": <%= fragment(:ec2_instance_types_hvm) %>,
             "ConstraintDescription": "must be a valid EC2 instance type."
         },
         "RDSInstanceDBName": {
@@ -95,40 +95,30 @@
         }
     },
     "Mappings": {
-        "RegionMap": <%= skyhopper_modules[:ami_mappings_2014_09] %>
+        "RegionMap": <%= fragment(:ami_mappings_2014_09) %>
     },
     "Resources": {
-        "ElasticLoadBalancer" : {
-          "Type" : "AWS::ElasticLoadBalancing::LoadBalancer",
-          "Properties" : {
-            "AvailabilityZones" : { "Fn::GetAZs" : "" },
-            "Instances" : [{ "Ref" : "EC2a" }, { "Ref" : "EC2b" }],
-            "Listeners" : [ {
-              "LoadBalancerPort" : "80",
-              "InstancePort" : "80",
-              "Protocol" : "HTTP"
-            }],
-            "HealthCheck" : {
-              "Target" : "HTTP:80/",
-              "HealthyThreshold" : "3",
-              "UnhealthyThreshold" : "5",
-              "Interval" : "30",
-              "Timeout" : "5"
-            }
-          }
-        },
-        "EC2a": {
+        "EC2Instance": {
             "Type": "AWS::EC2::Instance",
             "Properties": {
-                "InstanceType": { "Ref": "EC2InstanceInstanceType" },
+                "InstanceType": { "Ref": "EC2InstanceType" },
                 "KeyName": { "Ref": "KeyName" },
                 "ImageId": {
-                    "Fn::FindInMap": [ "RegionMap", { "Ref": "AWS::Region" }, "AMI"]
+                    "Fn::FindInMap": [
+                        "RegionMap",
+                        { "Ref": "AWS::Region" },
+                        "AMI"
+                    ]
                 },
                 "AvailabilityZone": {
-                    "Fn::Select" : ["0", { "Fn::GetAZs" : "" }]
+                    "Fn::Select" : [ "0", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
                 },
-                "Tags": [{ "Key": "Name", "Value": "EC2a" }],
+                "Tags": [
+                    {
+                        "Key":   "Name",
+                        "Value": "EC2 Instance"
+                    }
+                ],
                 "BlockDeviceMappings": [
                     {
                         "DeviceName": "/dev/xvda",
@@ -140,39 +130,10 @@
                 ]
             }
         },
-        "EC2b": {
-            "Type": "AWS::EC2::Instance",
+        "EC2EIP": {
+            "Type": "AWS::EC2::EIP",
             "Properties": {
-                "InstanceType": { "Ref": "EC2InstanceInstanceType" },
-                "KeyName": { "Ref": "KeyName" },
-                "ImageId": {
-                    "Fn::FindInMap": [ "RegionMap", { "Ref": "AWS::Region" }, "AMI"]
-                },
-                "AvailabilityZone": {
-                    "Fn::Select" : ["0", { "Fn::GetAZs" : "" }]
-                },
-                "Tags": [{ "Key": "Name", "Value": "EC2b" }],
-                "BlockDeviceMappings": [
-                    {
-                        "DeviceName": "/dev/xvda",
-                        "Ebs": {
-                            "VolumeSize": { "Ref": "BlockDeviceVolumeSize"},
-                            "VolumeType": { "Ref": "BlockDeviceVolumeType"}
-                        }
-                    }
-                ]
-            }
-        },
-        "EC2aEIP" : {
-            "Type" : "AWS::EC2::EIP",
-            "Properties" : {
-              "InstanceId" : { "Ref" : "EC2a" }
-            }
-        },
-        "EC2bEIP" : {
-            "Type" : "AWS::EC2::EIP",
-            "Properties" : {
-              "InstanceId" : { "Ref" : "EC2b" }
+                "InstanceId": { "Ref": "EC2Instance" }
             }
         },
         "RDSInstance": {
