Write spec and fix broken codes.

--- a/lib/erb-builder/templates/presets/Multi_Server_Pattern.json.erb
+++ b/lib/erb-builder/templates/presets/Multi_Server_Pattern.json.erb
@@ -29,7 +29,7 @@
         }
     },
     "Mappings": {
-        "RegionMap": <%= fragment(:ami_mappings_2014_09) %>
+        "RegionMap": <%= fragment(:ami_mappings) %>
     },
     "Resources": {
         "ElasticLoadBalancer" : {
