--- a/lib/erb-builder/templates/presets/Multi_Server_Pattern_with_S3.json.erb
+++ b/lib/erb-builder/templates/presets/Multi_Server_Pattern_with_S3.json.erb
@@ -48,7 +48,7 @@
         }
     },
     "Mappings": {
-        "RegionMap": <%= fragment(:ami_mappings_2014_09) %>
+        "RegionMap": <%= fragment(:ami_mappings) %>
     },
     "Resources": {
         "ElasticLoadBalancer" : {
