--- a/lib/erb-builder/templates/presets/Simple_Pattern_with_RDS_S3.json.erb
+++ b/lib/erb-builder/templates/presets/Simple_Pattern_with_RDS_S3.json.erb
@@ -114,7 +114,7 @@
         }
     },
     "Mappings": {
-        "RegionMap": <%= fragment(:ami_mappings_2014_09) %>
+        "RegionMap": <%= fragment(:ami_mappings) %>
     },
     "Resources": {
         "S3Bucket": {
