test for register button for zabbix location.

--- a/app/views/vue/_monitoring_tabpane.html.erb
+++ b/app/views/vue/_monitoring_tabpane.html.erb
@@ -1,9 +1,9 @@
 <div v-if="before_register">
   <h3 class="page-header"><%= I18n.t('monitoring.register_host')%></h3>
   <div class="alert alert-warning">
-    <%= t 'monitoring.msg.before_create_host' %>
+    <%= t 'monitoring.msg.before_create_host' %> test message Joeper
   </div>
-  <button v-if="!creating" v-on="click: create()"class="btn btn-primary"><%= t 'monitoring.btn.create' %></button>
+  <button v-if="!creating" v-on="click: create()"class="btn btn-primary"><%= t 'monitoring.btn.create' %> test reg joeper</button>
   <div-loader v-if="creating"></div-loader>
 </div>
 
