--- a/app/views/monitorings/_modal_trigger_register_description.html.erb
+++ b/app/views/monitorings/_modal_trigger_register_description.html.erb
@@ -10,11 +10,18 @@
 
         <div class="col-md-12 col-sm-12" v-if="before_setting">
           <h4 class="page-header"></h4>
-                <tr v-repeat="r: templates">
-                  <td>{{$value}} :: values</td>
+                <tr v-repeat="templates">
+                  <td>{{$value}}</td>
                 </tr>
           </div>
         </div>
+        <div class="col-md-12 col-sm-12">
+            templates: {{template}}
+            <ul>
+              <li><span v-repeat="templates">{{$value}}</span></li>
+            </ul>
+        </div>
+
 
       <div class="modal-footer">
         <button v-on="click: create()" type="button" class="btn btn-primary" data-dismiss="modal">Register</button>
