--- a/app/views/monitorings/_modal_trigger_register_description.html.erb
+++ b/app/views/monitorings/_modal_trigger_register_description.html.erb
@@ -10,12 +10,17 @@
 
 
         <div class="col-md-12 col-sm-12">
-            <i v-repeat="templates">
-              <input class="form-control input-sm" type="checkbox" value="{{$value}}">{{$value}}
-            </i>
+          <form class="form-horizontal">
+            <div class="form-group" v-repeat="templates">
+              <div class="col-sm-10">
+                <input type="checkbox" value="{{$value}}" class="form-control input-sm" id="inputEmail3">
+              </div>
+              <label for="inputEmail3" class="col-sm-2 control-label">{{$value}}</label>
+            </div>
+          </form>
         </div>
 
-
+        
       <div class="modal-footer">
         <button v-on="click: create()" type="button" class="btn btn-primary" data-dismiss="modal">Register</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
