--- a/app/views/monitorings/_modal_trigger_register_description.html.erb
+++ b/app/views/monitorings/_modal_trigger_register_description.html.erb
@@ -1,5 +1,5 @@
 <!-- modal for trigger setting -->
-<div id="register-warning" class="modal fade bs-example-modal-lg",  tabindex="-1" role="dialog" aria-hidden="true">
+<div id="register-warning" class="modal fade",  tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -12,15 +12,15 @@
         <div class="col-md-12 col-sm-12">
           <form class="form-horizontal">
             <div class="form-group" v-repeat="templates">
-              <div class="col-sm-10">
-                <input type="checkbox" value="{{$value}}" class="form-control input-sm" id="inputEmail3">
+              <div class="col-sm-2">
+                <input type="checkbox" value="{{$value}}" id="inputEmail3">
               </div>
               <label for="inputEmail3" class="col-sm-2 control-label">{{$value}}</label>
             </div>
           </form>
         </div>
 
-        
+
       <div class="modal-footer">
         <button v-on="click: create()" type="button" class="btn btn-primary" data-dismiss="modal">Register</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
