--- a/app/views/monitorings/_modal_trigger_register_description.html.erb
+++ b/app/views/monitorings/_modal_trigger_register_description.html.erb
@@ -10,12 +10,12 @@
 
 
         <div class="col-md-12 col-sm-12">
-          <form class="form-horizontal">
+          <form>
             <div class="form-group" v-repeat="templates">
               <div class="col-sm-2">
-                <input type="checkbox" value="{{$value}}" id="inputEmail3">
+                <input type="checkbox" class="form-control input-sm" value="{{$value}}" id="inputEmail3">
               </div>
-              <label for="inputEmail3" class="col-sm-2 control-label">{{$value}}</label>
+              <label for="inputEmail3" class="col-sm-10 control-label">{{$value}}</label>
             </div>
           </form>
         </div>
