--- a/app/views/monitorings/_modal_trigger_register_description.html.erb
+++ b/app/views/monitorings/_modal_trigger_register_description.html.erb
@@ -21,7 +21,7 @@
 
 
       <div class="modal-footer">
-        <button v-on="click: default()" type="button" class="btn btn-default">Select Default</button>
+        <button v-on="click: set_default()" type="button" class="btn btn-default">Select Default</button>
         <button v-on="click: create()" type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
       </div>
