--- a/app/views/monitorings/_modal_trigger_register_description.html.erb
+++ b/app/views/monitorings/_modal_trigger_register_description.html.erb
@@ -21,8 +21,8 @@
 
 
       <div class="modal-footer">
-        <button v-on="click: create()" type="button" class="btn btn-primary {{has_selected ? '' : 'disabled'}}" {{has_selected ? '' : 'disabled'}} data-dismiss="{{has_selected ? 'modal' : ''}}">Submit</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button v-on="click: create()" type="button" class="btn btn-primary {{has_selected ? '' : 'disabled'}}" {{has_selected ? '' : 'disabled'}} data-dismiss="{{has_selected ? 'modal' : ''}}"><%= t 'monitorings.btn.done' %></button>
+        <button type="button" class="btn btn-default" data-dismiss="modal"><%= t 'monitoring.btn.cancel' %></button>
       </div>
     </div>
   </div>
